# StackWise-AI

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: backend-build.yml  build.yml  ci.yml  frontend-build.yml
.kiro/: README.md
api/: main.py
api/routes/: evaluate.py  pareto.py  scenarios.py
api/schemas/: evaluate.py
app/: main.py
backend/: .dockerignore  DockerFile  Dockerfile  main.py  schemas.py
catalog/: backend_frameworks.yaml  databases.yaml  deployment.yaml  languages.yaml  options.json
core/: confidence.py  constraints.py  evidence.py  explain.py  pareto.py  scenarios.py  scoring.py  sensitivity.py
database/: connection.py  operations.py  queries.py  schema.sql
engine/: confidence.py  embeddings.py  explain.py  nl_parser.py  pareto.py  recommend.py  scoring.py  sensitivity.py  similarity.py
engine/ml/: build_training_data.py  evaluate_model.py  features.py  generate_dummy_feedback.py  model.pkl  predict.py  train_model.py
evaluator/: constraints.py  explain.py  scoring.py
evidence/: language_signals.py  loader.py  mappings.py
frontend/: DockerFile  Dockerfile  app.py  index.html  package-lock.json  package.json
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.tsx  index.css
pipelines/: build_features.py  build_language_benchmarks.py  convert_dataset.py  extract_languages.py  inspect_created_at.py  inspect_dataset.py
scripts/: test_backend.sh
tests/: test_api.py  test_confidence.py  test_pareto.py  test_scoring.py
(+28 files in other folders)
