[project]
name = "referee-tool"
version = "0.2.0"
description = "Explainable decision-analysis platform for infrastructure recommendations"
requires-python = ">=3.11"

dependencies = [
    "duckdb",
    "polars",
    "pyarrow",
    "pandas",
    "datasets",
    "fastapi",
    "uvicorn",
    "pydantic",
    "streamlit",
    "plotly",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]