[project]
name = "stackwise-ai"
version = "0.1.0"
description = "AI-powered tech stack recommendation system"
authors = [
    { name = "Aditya Singh" }
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "pandas",
    "pyyaml",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["."]